SystemUI: Prevent loop with display timeout
* When no secure lock screen is set and the display
  times out, it immediately turns on again
* Do not trigger showing the keyguard when we don't
  actually need it

Change-Id: I685329e74afb0af79b5d8843ba9d3af2ee6377d4

--- a/packages/SystemUI/res/values/strings.xml
+++ b/packages/SystemUI/res/values/strings.xml
@@ -2495,5 +2495,8 @@
 
     <!-- Notification content text when switching to a default launcher that supports gesture navigation [CHAR LIMIT=NONE] -->
     <string name="notification_content_gesture_nav_available">Go to Settings to update system navigation</string>
+    
+    <string name="doze_brightness_sensor_type">Doze Brightness Sensor Type</string>
+    
 
 </resources>
